# rules_flutter

./: .bazelignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  SECURITY.md  update_tool_versions.sh
.bcr/: config.yml  presubmit.yml
.bcr/gazelle/: metadata.template.json  presubmit.yml  source.template.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: BUILD.bazel  ci.yaml  release.yml  release_prep.sh  tag.yaml  update-flutter-versions.yaml
docs/: BUILD.bazel  extensions.md  hermeticity.md  migrating.md  rules.md
e2e/smoke/: .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  gazelle_generation_test.py  sdk_cache_sealed_test.sh
e2e/smoke/app/: BUILD  BUILD.bazel  pubspec.yaml
e2e/smoke/app/lib/: fixnum_usage.dart
e2e/smoke/codegen_app/: BUILD.bazel  pub_deps.json  pubspec.yaml
e2e/smoke/codegen_app/assets/: hello.txt
e2e/smoke/codegen_app/lib/: model.dart
e2e/smoke/codegen_app/test/: codegen_test.dart
e2e/smoke/dart_package/: BUILD.bazel
e2e/smoke/flutter_app/: BUILD.bazel  dart_test.yaml  pub_deps.json  pubspec.yaml  web_build_args_test.sh
e2e/smoke/flutter_app/lib/: main.dart
e2e/smoke/flutter_app/test/: golden_test.dart
e2e/smoke/gazelle_app/: BUILD.bazel.golden
e2e/smoke/multiplatform/: BUILD.bazel  pub_deps.json  pubspec.yaml
e2e/smoke/protos/api/v1/: BUILD.bazel  service.proto
e2e/smoke/shell_example/: BUILD.bazel  test_access.sh
examples/hello_world/: BUILD.bazel  MODULE.bazel  README.md  pub_deps.json  pubspec.yaml
examples/hello_world/lib/: main.dart
examples/hello_world/test/: widget_test.dart
flutter/: BUILD.bazel  android_toolchain.bzl  defs.bzl  extensions.bzl  providers.bzl  repositories.bzl  runner.bash.template  runner.bat.template  toolchain.bzl
flutter/private/: BUILD.bazel  android_sdk_repo.bzl  context.bzl  flutter_actions.bzl  flutter_bin_runner.bzl  package.bzl  package_generation.bzl  pub_repository.bzl  resolved_toolchain.bzl  sdk_repo.bzl  toolchains_repo.bzl  version_select.bzl  versions.bzl
flutter/tests/: BUILD.bazel  exec_posture_test.bzl  version_select_test.bzl  versions_test.bzl
flutter/tests/analysis/: BUILD.bazel  defs_analysis_test.bzl  pub_deps.json  pubspec.yaml
flutter/tests/flutter_app/: BUILD  BUILD.bazel
flutter/tests/flutter_app/src/: pubspec.yaml
flutter/tests/multiplatform/: BUILD  BUILD.bazel
gazelle/: .bazelversion  BUILD.bazel  MODULE.bazel  go.mod
gazelle/dartproto/: BUILD.bazel  resolve.go
gazelle/flutter/: BUILD.bazel  config.go  config_test.go  generate.go  generate_test.go  language.go  pubspec.go  resolve.go
scripts/: update_flutter_versions.sh
