load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "//gazelle/flutter",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

# Convenience alias for updating Flutter SDK versions
alias(
    name = "update_flutter_versions",
    actual = "//tools:update_flutter_versions",
    visibility = ["//visibility:public"],
)
