load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

# Test-fixture Flutter package; its BUILD file is hand-written.
# gazelle:exclude flutter/tests/analysis

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@rules_flutter_gazelle//flutter",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)
