"Bazel dependencies"

module(
    name = "rules_flutter",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

flutter = use_extension("//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.24.0")
use_repo(
    flutter,
    "flutter_linux",
    "flutter_macos",
    "flutter_toolchains",
    "flutter_windows",
)

register_toolchains("@flutter_toolchains//:all")

pub = use_extension("//flutter:extensions.bzl", "pub")
pub.package(
    name = "pub_async",
    package = "async",
    version = "2.11.0",
)
pub.package(
    name = "pub_boolean_selector",
    package = "boolean_selector",
    version = "2.1.1",
)
pub.package(
    name = "pub_characters",
    package = "characters",
    version = "1.3.0",
)
pub.package(
    name = "pub_clock",
    package = "clock",
    version = "1.1.1",
)
pub.package(
    name = "pub_collection",
    package = "collection",
    version = "1.18.0",
)
pub.package(
    name = "pub_fake_async",
    package = "fake_async",
    version = "1.3.1",
)
pub.package(
    name = "pub_intl",
    package = "intl",
    version = "0.19.0",
)
pub.package(
    name = "pub_leak_tracker",
    package = "leak_tracker",
    version = "10.0.5",
)
pub.package(
    name = "pub_leak_tracker_flutter_testing",
    package = "leak_tracker_flutter_testing",
    version = "3.0.5",
)
pub.package(
    name = "pub_leak_tracker_testing",
    package = "leak_tracker_testing",
    version = "3.0.1",
)
pub.package(
    name = "pub_matcher",
    package = "matcher",
    version = "0.12.16+1",
)
pub.package(
    name = "pub_material_color_utilities",
    package = "material_color_utilities",
    version = "0.11.1",
)
pub.package(
    name = "pub_meta",
    package = "meta",
    version = "1.15.0",
)
pub.package(
    name = "pub_path",
    package = "path",
    version = "1.9.0",
)
pub.package(
    name = "pub_source_span",
    package = "source_span",
    version = "1.10.0",
)
pub.package(
    name = "pub_stack_trace",
    package = "stack_trace",
    version = "1.11.1",
)
pub.package(
    name = "pub_stream_channel",
    package = "stream_channel",
    version = "2.1.2",
)
pub.package(
    name = "pub_string_scanner",
    package = "string_scanner",
    version = "1.2.0",
)
pub.package(
    name = "pub_term_glyph",
    package = "term_glyph",
    version = "1.2.1",
)
pub.package(
    name = "pub_test_api",
    package = "test_api",
    version = "0.7.2",
)
pub.package(
    name = "pub_vector_math",
    package = "vector_math",
    version = "2.1.4",
)
pub.package(
    name = "pub_vm_service",
    package = "vm_service",
    version = "14.2.4",
)
use_repo(
    pub,
    "pub_async",
    "pub_boolean_selector",
    "pub_characters",
    "pub_clock",
    "pub_collection",
    "pub_fake_async",
    "pub_intl",
    "pub_leak_tracker",
    "pub_leak_tracker_flutter_testing",
    "pub_leak_tracker_testing",
    "pub_matcher",
    "pub_material_color_utilities",
    "pub_meta",
    "pub_path",
    "pub_source_span",
    "pub_stack_trace",
    "pub_stream_channel",
    "pub_string_scanner",
    "pub_term_glyph",
    "pub_test_api",
    "pub_vector_math",
    "pub_vm_service",
)

# Go dependencies for gazelle plugin
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:ggx_nogo")
use_repo(
    go_sdk,
    "go_toolchains",
    # This name is ugly on purpose to avoid a conflict with a user-named SDK.
    "io_bazel_rules_nogo",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "in_gopkg_yaml_v3")
