"Bazel dependencies"

module(
    name = "rules_flutter",
    # Stamped by the release workflow; 0.0.0 on main between releases.
    version = "0.0.0",
    bazel_compatibility = [">=7.1.0"],
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

# Floor for the transitively-resolved apple_support: protobuf's C++ tools are
# compiled with its wrapped_clang on macOS, and older versions ship a
# binary rejected by current Xcode toolchains (missing LC_UUID).
bazel_dep(name = "apple_support", version = "1.23.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "32.1")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.2", dev_dependency = True)

flutter = use_extension("//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.24.0")
use_repo(
    flutter,
    "flutter_sdk",
    "flutter_toolchains",
)

register_toolchains("@flutter_toolchains//:all")

# These tags must stay non-dev: pub.package-registered repositories keep
# their fetch-time vendored .pub_cache closure, and the dart_proto_library
# aspect executes protoc-gen-dart from @pub_protoc_plugin against exactly
# that closure. Making them dev_dependency would delete it in consumer
# workspaces and break proto generation at execution time.
pub = use_extension("//flutter:extensions.bzl", "pub")
pub.package(
    name = "pub_fixnum",
    package = "fixnum",
    version = "1.1.1",
)
pub.package(
    name = "pub_protobuf",
    package = "protobuf",
    version = "3.1.0",
)
pub.package(
    name = "pub_path",
    package = "path",
    version = "1.9.0",
)
pub.package(
    name = "pub_protoc_plugin",
    package = "protoc_plugin",
    version = "21.1.1",
)
pub.package(
    name = "pub_meta",
    package = "meta",
    version = "1.15.0",
)
use_repo(
    pub,
    "pub_fixnum",
    "pub_meta",
    "pub_path",
    "pub_protobuf",
    "pub_protoc_plugin",
)

# Go dependencies for gazelle plugin
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "//:ggx_nogo")
use_repo(
    go_sdk,
    "go_toolchains",
    # This name is ugly on purpose to avoid a conflict with a user-named SDK.
    "io_bazel_rules_nogo",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "in_gopkg_yaml_v3")
