# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

stardoc_with_diff_test(
    name = "rules",
    bzl_library_target = "//flutter:defs",
)

# Documents the `flutter` and `pub` module extensions (their tag classes and
# attributes), which //flutter:defs does not cover.
stardoc_with_diff_test(
    name = "extensions",
    bzl_library_target = "//flutter:extensions",
)

# Explicit file map rather than update_docs(): the auto-discovery in
# update_docs matched nothing here, silently writing no files and creating no
# diff test, which let docs/rules.md go stale. This also emits :update_test,
# which gates staleness in //flutter/tests:all_tests.
#
# Tagged manual: the goldens are rendered by the pinned .bazelversion's
# stardoc, and older Bazel renders extension tag classes differently, so
# wildcard runs on CI's Bazel-floor legs must skip these. They still run
# where named explicitly: //docs:update_tests and //flutter/tests:all_tests,
# under the pinned version.
write_source_files(
    name = "update",
    files = {
        "extensions.md": ":extensions-docgen.md",
        "rules.md": ":rules-docgen.md",
    },
    tags = ["manual"],
)
