load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//flutter/private:flutter_bin_runner.bzl", "flutter_bin_runner")
load("//flutter/private:resolved_toolchain.bzl", "resolved_toolchain")

# For stardoc to reference the files
exports_files(["defs.bzl"])

# Runs the Flutter SDK's `flutter` executable.
flutter_bin_runner(
    name = "flutter",
    tool = "flutter",
    toolchain = ":resolved_toolchain",
    visibility = ["//visibility:public"],
)

# Runs the Flutter SDK's `dart` executable.
flutter_bin_runner(
    name = "dart",
    tool = "dart",
    toolchain = ":resolved_toolchain",
    visibility = ["//visibility:public"],
)

# Runs the Flutter SDK's `flutter-dev` executable.
flutter_bin_runner(
    name = "flutter-dev",
    tool = "flutter_dev",
    toolchain = ":resolved_toolchain",
    visibility = ["//visibility:public"],
)

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//flutter/private:toolchains_repo",
        "//flutter/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [":repositories"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
