load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load("//flutter/private:resolved_toolchain.bzl", "resolved_toolchain")

# For stardoc to reference the files
exports_files(["defs.bzl"])

# The CPU-heavy hermetic actions (dependency preparation/codegen and
# web/desktop flutter builds) and the test rules default to no-remote-exec:
# default-size remote executors are far too small for them (a prepare that
# takes ~1 minute on an 8-CPU worker has been observed taking 50+ minutes
# remotely), while remote CACHING of their results stays enabled. Flip this
# flag to opt into remote execution on a well-resourced RBE fleet:
#   build --//flutter:allow_remote_execution
bool_flag(
    name = "allow_remote_execution",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# Opt-in persistent build_runner incremental state. Set to an absolute
# directory to have the dependency-preparation action restore/save
# build_runner's .dart_tool/build cache across builds, turning the cold
# full-codegen inner loop into an incremental one:
#   build --//flutter:build_runner_cache=/abs/path
#   build --sandbox_writable_path=/abs/path
# Empty (default) is fully hermetic and byte-identical. When set, the
# preparation action additionally inherits the client shell environment
# (a documented, opt-in reduction in hermeticity, like the Gradle/CocoaPods
# cache escape hatches); a stale cache only forces a full rebuild, never
# wrong output.
string_flag(
    name = "build_runner_cache",
    build_setting_default = "",
    visibility = ["//visibility:public"],
)

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//flutter/private:toolchains_repo",
        "//flutter/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":toolchain",
        "//flutter/private:flutter_actions",
        "@bazel_skylib//lib:paths",
        "@bazel_skylib//rules:common_settings",
        "@protobuf//bazel/common:proto_common_bzl",
        "@protobuf//bazel/common:proto_info_bzl",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [":repositories"],
)

bzl_library(
    name = "pub",
    srcs = ["pub.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//flutter/private:pub_repository"],
)

alias(
    name = "dart",
    actual = "@flutter_sdk//:dart",
    visibility = ["//visibility:public"],
)

alias(
    name = "flutter",
    actual = "@flutter_sdk//:flutter",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)
