"Bazel dependencies for the rules_flutter Gazelle plugin"

module(
    name = "rules_flutter_gazelle",
    # Stamped by the release workflow; 0.0.0 on main between releases.
    # Released in lockstep with rules_flutter from the same tag.
    version = "0.0.0",
    bazel_compatibility = [">=8.0.0"],
    compatibility_level = 1,
)

# Consumers link these Go libraries into their own gazelle_binary, so Gazelle
# and the Go rules are real (non-dev) dependencies of this module. Keeping the
# plugin in its own module means plain rules_flutter consumers never resolve a
# Go toolchain.
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "in_gopkg_yaml_v3")

# nogo only applies when this module is the root (plugin development).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.nogo(nogo = "//:nogo")
