"""Provides a simple way to test your rules as an external workspace.
Add a basic smoke-test target below.
"""

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_flutter//flutter:defs.bzl", "dart_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@bazel_gazelle//language/proto",
        "@rules_flutter//gazelle/flutter",
        "@rules_flutter//gazelle/dartproto",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

filegroup(
    name = "gazelle_app_fixture",
    srcs = glob(["gazelle_app/**"]),
)

py_test(
    name = "gazelle_generation_test",
    srcs = ["gazelle_generation_test.py"],
    args = ["$(rootpath :gazelle_bin)"],
    data = [
        ":gazelle_app_fixture",
        ":gazelle_bin",
    ],
    main = "gazelle_generation_test.py",
    tags = ["no-sandbox"],
    deps = ["@bazel_tools//tools/python/runfiles"],
)

# Test basic rule functionality
dart_library(
    name = "test_dart_lib",
    srcs = ["test_lib.dart"],
)

build_test(
    name = "smoke_test",
    targets = [
        ":test_dart_lib",
        # Test that we can load the main rules
        "@rules_flutter//flutter:resolved_toolchain",
    ],
)

build_test(
    name = "single_pub_dependency_build_test",
    targets = ["@pub_intl_utils//:intl_utils"],
)

build_test(
    name = "pub_tooling_dependency_build_test",
    targets = [
        "@pub_analyzer//:analyzer",
        "@pub_path//:path",
        "@pub_protoc_plugin//:protoc_plugin",
    ],
)

sh_test(
    name = "sdk_cache_sealed_test",
    srcs = ["sdk_cache_sealed_test.sh"],
    data = ["@flutter_sdk//:flutter_bin"],
)

test_suite(
    name = "integration_tests",
    tests = [
        ":gazelle_generation_test",
        ":pub_tooling_dependency_build_test",
        ":sdk_cache_sealed_test",
        ":single_pub_dependency_build_test",
        ":smoke_test",
        "//codegen_app:codegen_build_test",
        "//codegen_app:lib_test",
        "//dart_package:dart_package_test",
        "//dart_package:lib_analyze",
        "//flutter_app:app_build_test",
        "//flutter_app:build_runner_mode_targets_test",
        "//flutter_app:build_runner_multirun_target_test",
        "//flutter_app:lib_analyze",
        "//flutter_app:lib_format",
        "//flutter_app:lib_test",
        "//flutter_app:web_build_args_test",
        "//proto_service:proto_generation_test",
    ],
)

alias(
    name = "go",
    actual = "@rules_go//go",
)
