bazel_dep(name = "rules_flutter", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

# Pub.dev dependencies
pub = use_extension("@rules_flutter//flutter:extensions.bzl", "pub")
use_repo(pub, "pub_fixnum")
