bazel_dep(name = "rules_flutter", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)

bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")
bazel_dep(name = "protobuf", version = "32.1")
bazel_dep(name = "rules_shell", version = "0.4.1")
bazel_dep(name = "rules_multirun", version = "0.13.0")

# Prebuilt protoc, used when building with
# --incompatible_enable_proto_toolchain_resolution: dart_proto_library must
# then generate through the resolved proto toolchain instead of the
# source-built @protobuf//:protoc (root-module registrations win over
# protobuf's own source toolchain).
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(version = "v32.1")
use_repo(protoc, "toolchains_protoc_hub")

register_toolchains("@toolchains_protoc_hub//:all")

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)

# Host Android SDK for the manual mobile example targets in //flutter_app.
bazel_dep(name = "rules_android", version = "0.6.6", dev_dependency = True)

android_sdk_repo = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
    dev_dependency = True,
)
use_repo(android_sdk_repo, "androidsdk")

local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

# The Gazelle plugin ships as its own module so plain rules_flutter consumers
# never resolve Go rules or a Go toolchain; this workspace tests both modules.
bazel_dep(name = "rules_flutter_gazelle", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "rules_flutter_gazelle",
    path = "../../gazelle",
)

# Without a root-module pin, Go SDK selection falls through to rules_android's
# go_sdk.download(version = "1.22.4"), whose darwin internal linker emits no
# LC_UUID load command — current macOS dyld refuses to start such binaries
# (the gazelle_binary dies with SIGABRT). Pin a modern SDK at the root, which
# always takes precedence.
bazel_dep(name = "rules_go", version = "0.57.0", dev_dependency = True)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.25.0")

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(
    flutter_version = "3.24.0",
    # Verified at fetch time: sentinel artifacts must exist in the SDK cache
    # (stable archives ship them; `flutter precache` runs only if missing).
    precache = ["web"],
)
use_repo(
    flutter,
    "flutter_sdk",
    "flutter_toolchains",
)

register_toolchains("@flutter_toolchains//:all")

# Pub.dev dependencies
pub = use_extension("@rules_flutter//flutter:extensions.bzl", "pub")
use_repo(
    pub,
    "pub_analyzer",
    "pub_archive",
    "pub_args",
    "pub_async",
    "pub_boolean_selector",
    "pub_build_runner",
    "pub_characters",
    "pub_clock",
    "pub_collection",
    "pub_copy_with_extension",
    "pub_copy_with_extension_gen",
    "pub_dart_style",
    "pub_fake_async",
    "pub_fixnum",
    "pub_flutter_gen_runner",
    "pub_flutter_lints",
    "pub_http",
    "pub_intl",
    "pub_intl_utils",
    "pub_leak_tracker",
    "pub_leak_tracker_flutter_testing",
    "pub_leak_tracker_testing",
    "pub_lints",
    "pub_matcher",
    "pub_material_color_utilities",
    "pub_meta",
    "pub_path",
    "pub_petitparser",
    "pub_protobuf",
    "pub_protoc_plugin",
    "pub_source_span",
    "pub_stack_trace",
    "pub_stream_channel",
    "pub_string_scanner",
    "pub_term_glyph",
    "pub_test_api",
    "pub_vector_math",
    "pub_vm_service",
    "pub_yaml",
)
