# Override http_archive for local testing
local_repository(
    name = "com_github_spencerc_rules_flutter",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_flutter setup #
######################
# Fetches the rules_flutter dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_github_spencerc_rules_flutter//flutter:repositories.bzl", "rules_flutter_dependencies")

rules_flutter_dependencies()
