# Override http_archive for local testing
local_repository(
    name = "rules_flutter",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_flutter setup #
######################
# Fetches the rules_flutter dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_flutter//flutter:repositories.bzl", "rules_flutter_dependencies")

rules_flutter_dependencies()

###############################
# Pub.dev package management #
###############################
load("@rules_flutter//flutter:pub.bzl", "pub_dev_repository")

# Example: Download the fixnum package from pub.dev
pub_dev_repository(
    name = "pub_fixnum",
    package = "fixnum",
    version = "1.1.1",
)
