"A minimal Flutter application built with rules_flutter."

bazel_dep(name = "rules_flutter", version = "0.2.0")

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(
    flutter_version = "3.24.0",
    precache = ["web"],
)
use_repo(
    flutter,
    "flutter_sdk",
    "flutter_toolchains",
)

register_toolchains("@flutter_toolchains//:all")

# One repository per hosted pub package, discovered from the checked-in
# pub_deps.json. After editing pubspec.yaml, run `bazel run //:lib.update`,
# then expose direct deps here (`pub = use_extension(...)` +
# `use_repo(pub, "pub_<package>")`) and reference them as
# @pub_<package>//:<package>. No use_repo entries are needed while the app
# only uses SDK packages.
use_extension("@rules_flutter//flutter:extensions.bzl", "pub")
