load(":exec_posture_test.bzl", "exec_posture_test_suite")
load(":version_select_test.bzl", "version_select_test_suite")
load(":versions_test.bzl", "versions_test_suite")

# Unit test for versions
versions_test_suite(name = "versions_test")

# Unit tests for semver-aware toolchain version selection
version_select_test_suite(name = "version_select_test")

# Unit tests for the execution-posture helpers
exec_posture_test_suite(name = "exec_posture_test")

# Toolchain-focused smoke tests that still live in the main workspace
test_suite(
    name = "toolchain_tests",
    tests = [
        "//flutter/tests/toolchain:dart_library_test",
        "//flutter/tests/toolchain:toolchain_resolution_test",
    ],
)

# All tests in the main workspace (integration tests live under //e2e/smoke)
test_suite(
    name = "all_tests",
    tests = [
        ":exec_posture_test",
        ":toolchain_tests",
        ":version_select_test",
        ":versions_test",
        "//docs:update_tests",
        "//flutter/tests/analysis:analysis_tests",
    ],
)
