load(
    "@rules_flutter//flutter:defs.bzl",
    "flutter_build",
    "flutter_context",
    "flutter_test",
)

flutter_context(
    name = "app_context",
    pubspec = "pubspec.yaml",
    pubspec_lock = "pubspec.lock",
)

flutter_test(
    name = "app_test",
    srcs = glob(["lib/**"]) + glob(["test/**"]),
    context = ":app_context",
)

flutter_build(
    name = "ios",
    cmd = [
        "ios",
        "--config-only",
    ],
    context = ":app_context",
)
