load(
    "@rules_flutter//flutter:defs.bzl",
    "flutter_build",
    "flutter_package",
    "flutter_test",
)

flutter_package(
    name = "package",
)

flutter_test(
    name = "app_test",
    srcs = glob(["test/**"]),
    package = ":package",
)

flutter_build(
    name = "ios",
    cmd = [
        "ios",
        "--config-only",
    ],
    package = ":package",
)
