load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_app", "flutter_library", "flutter_test")
load("@rules_multirun//:defs.bzl", "command", "multirun")

flutter_library(
    name = "lib",
    srcs = ["lib/main.dart"],
    data = glob(["l10n/**"]),
    generator_commands = ["intl_utils:generate"],
    pubspec = "pubspec.yaml",
    deps = [
        "@flutter_sdk//flutter/packages/flutter",
        "@flutter_sdk//flutter/packages/flutter_localizations",
        "@flutter_sdk//flutter/packages/flutter_test",
        "@pub_fixnum//:fixnum",
        "@pub_flutter_lints//:flutter_lints",
        "@pub_intl_utils//:intl_utils",
        "@pub_vector_math//:vector_math",
    ],
)

# Flutter tests in the same directory as pubspec.yaml
flutter_test(
    name = "lib_test",
    srcs = glob(["test/**"]),
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

# Flutter app in the same directory as pubspec.yaml
flutter_app(
    name = "app",
    embed = [":lib"],
    visibility = ["//visibility:public"],
    web = ":web_files",
)

build_test(
    name = "app_build_test",
    targets = [":app.web"],
)

build_test(
    name = "build_runner_mode_targets_test",
    targets = [
        ":lib.build_runner_build",
        ":lib.build_runner_test",
        ":lib.build_runner_watch",
        ":lib.build_runner_serve",
    ],
)

command(
    name = "build_runner_build_cmd",
    command = ":lib.build_runner_build",
)

command(
    name = "build_runner_test_cmd",
    command = ":lib.build_runner_test",
)

command(
    name = "build_runner_watch_cmd",
    command = ":lib.build_runner_watch",
)

command(
    name = "build_runner_serve_cmd",
    command = ":lib.build_runner_serve",
)

multirun(
    name = "build_runner_dev",
    commands = [
        ":build_runner_watch_cmd",
        ":build_runner_serve_cmd",
    ],
    jobs = 0,
)

multirun(
    name = "build_runner_verify",
    commands = [
        ":build_runner_build_cmd",
        ":build_runner_test_cmd",
    ],
)

build_test(
    name = "build_runner_multirun_target_test",
    targets = [
        ":build_runner_dev",
        ":build_runner_verify",
    ],
)

filegroup(
    name = "web_files",
    srcs = glob(["web/**"]),
)
